<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:fontFamily="@font/zxspectrum"
            android:text="@string/app_name"
            android:textColor="#4CAF50"
            android:textSize="24sp"></TextView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/zxspectrum"
            android:gravity="center"
            android:text="@string/ayuda_text"
            android:textColor="#FFEB3B"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/zxspectrum"
                android:gravity="right|center_vertical"
                android:text="@string/version"
                android:textColor="#E91E63"></TextView>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                app:srcCompat="@drawable/spectrumcolors" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonokacercade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fontFamily="@font/zxspectrum"
            android:text="VALE"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="600dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

</ScrollView>