<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:gravity="center"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/elige"
            android:textColor="#03A9F4"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewgotas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/gotas_de_acido"
                android:textColor="#24C118"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumbergotas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttongotas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2gotas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_espinetes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/espinetes"
                android:textColor="#F107D9"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber_espinetes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_espinetes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2_espinetes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Fantasmas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/fantasmas"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber_Fantasmas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_Fantasmas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2_Fantasmas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Lagartijas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/lagartijas"
                android:textColor="#00BCD4"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber_Lagartijas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_Lagartijas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2_Lagartijas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Momias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/momias"
                android:textColor="#FFEB3B"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber_Momias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_Momias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2_Momias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Vampiros"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/vampiros"
                android:textColor="#C11818"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber_Vampiros"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_Vampiros"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2_Vampiros"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Esqueletos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/esqueletos"
                android:textColor="#8A48E4"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber_Esqueletos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_Esqueletos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2_Esqueletos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Balas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="5"
                android:text="@string/recarga_de_balas"
                android:textColor="#FF5722"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber_Balas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_Balas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2_Balas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textSize="24sp" />

        </LinearLayout>

        <Button
            android:id="@+id/botonokenemigos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="OK" />

        <Space
            android:layout_width="600dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


</ScrollView>
